--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -48,3 +48,29 @@
     height: 120px;
     border-radius: 20px;
 }
+
+@media screen and (max-width:480px) {
+    .a {
+        flex-direction: column;
+        text-align: center;
+        margin-top: 50px;
+    }
+
+    .a-left {
+        width: 100%;
+    }
+
+    .a-card {
+        height: 30vh;
+    }
+
+    .a-card.bg,
+    .a-award {
+        display: none;
+    }
+
+    .a-right {
+        padding: 20px;
+
+    }
+}
