--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -12,6 +12,8 @@
     background-color: rgb(243, 242, 242);
     display: flex;
     align-items: center;
+    position: sticky;
+    z-index: 2;
 }
 
 .p-circle {
@@ -24,4 +26,16 @@
 
 .p-img {
     width: 100%;
+    transition: all 10s ease;
+}
+
+.p:hover .p-img {
+    transform: translateY(-100%)
+}
+
+@media screen and (max-width:480px) {
+    .p {
+        width: 40%;
+        height: 20vh;
+    }
 }
